--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     frontend:
         container_name: ui
         build:
-            context: ./frontend
+            context: ./GlossaryUI
             dockerfile: Dockerfile
         depends_on: 
             - server
